[gd_scene load_steps=2 format=2]

[ext_resource path="res://Multiplayer/Demo.gd" type="Script" id=1]

[node name="Demo" type="Node2D"]
script = ExtResource( 1 )

[node name="Server" type="Button" parent="."]
margin_left = 42.0
margin_top = 22.0
margin_right = 94.0
margin_bottom = 42.0
text = "Server"

[node name="Client" type="Button" parent="."]
margin_left = 44.0
margin_top = 65.0
margin_right = 93.0
margin_bottom = 85.0
text = "Client"

[node name="lblMyId" type="Label" parent="."]
margin_left = 56.0
margin_top = 108.0
margin_right = 96.0
margin_bottom = 122.0
text = "My Id:"

[node name="Value" type="Label" parent="lblMyId"]
margin_left = 46.0
margin_right = 86.0
margin_bottom = 14.0
text = "NOT SET"

[node name="lblUpdate" type="Label" parent="."]
margin_left = 58.0
margin_top = 142.0
margin_right = 98.0
margin_bottom = 156.0

[connection signal="pressed" from="Server" to="." method="_on_Server_pressed"]
[connection signal="pressed" from="Client" to="." method="_on_Client_pressed"]
